carousel_with_buttons_ok

--- a/public/jokes.css
+++ b/public/jokes.css
@@ -125,7 +125,7 @@ footer #main_footer #contr div{
     box-shadow: 0 0 2px 3px #0000004f;
 }
 #prev:hover, #next:hover{
-    background-color: rgba(214, 212, 206, 0.8);
+    /*background-color: rgba(214, 212, 206, 0.8);*/
     /*border-radius: 3px;*/
 }
 #video_name{
