--- a/public/jokes.css
+++ b/public/jokes.css
@@ -131,3 +131,19 @@ footer #main_footer #contr div{
 #video_name{
     text-align: center;
 }
+#output_div, #description{
+    
+}
+#description{
+    /*width: 1000px;*/
+    min-height:150px;
+    padding: 10px;
+    border: 3px solid #0000004f;
+    border-style: outset;
+}
+#description h2{
+    text-align: center;
+}
+#description p{
+    text-align: left;
+}
