--- a/public/jokes.css
+++ b/public/jokes.css
@@ -5,10 +5,10 @@ h3 {font-weight: normal; padding: 1.5em; color: white; text-shadow: 1px 1px 0px 
 
 nav {background-color: #256aa0;}
 
-nav a {color: white; text-decoration: none;}
+nav a {color: white; text-decoration: none; font-size: 17px;}
 nav a:hover {color: #ddd;}
 nav ul {display: table; width: 1000px; margin: auto;}
-nav li {display: table-cell; text-align: center; padding: 1em;}
+nav li {display: table-cell; text-align: center; padding: 0.5em;}
 
 main {overflow: auto; min-height: 30vh; background-color: #f7f7f7; width: 1000px; margin: auto; box-shadow: -1000px 0 0 #f7f7f7, 1000px 0 0 #f7f7f7; padding-top: 20px;}
 
